# nxbt

./: .gitignore  LICENSE  MANIFEST.in  README.md  boot_vagrant_mac.sh  demo.py  mac_Vagrantfile  setup.cfg  setup.py  template_vagrantfile  test.py  vagrant_setup.py
docs/: Analog Stick Input.md  Analog Stick and Button Input.md  Example Pairing Session.md  Macros.md  Miscellaneous Notes.md  Windows-and-macOS-Installation.md
nxbt/: __init__.py  bluez.py  cli.py  logging.py  manager.py  nxbt.py  tui.py
nxbt/controller/: __init__.py  controller.py  input.py  protocol.py  server.py  utils.py
nxbt/controller/sdp/: switch-controller.xml
nxbt/web/: __init__.py  app.py  cert.py
nxbt/web/static/css/: main.css
nxbt/web/static/js/: main.js  socket.io.js
nxbt/web/templates/: index.html
scripts/: crash_switch.py  demo_loop.py  dep_check.sh  jc_proxy.py  proxy.py  reconnect_proxy.py  reconnect_test.py  reset_adapter.sh  sticks.py  switch_emu.py  testbt.py
scripts/macro/: nxbt-macro-asphalt9-generator.py
