[metadata]
name = nxbt
version = 0.1.4
author = Reece Walsh
author-email = reece@brikwerk.com
project_urls =
    Code = https://github.com/Brikwerk/nxbt
    Issue tracker = https://github.com/Brikwerk/nxbt/issues
license = MIT
license-file = LICENSE
description = Control your Nintendo Switch through a website, terminal, or macro.
long-description = file: README.md
long_description_content_type = text/markdown,
platform = any
url = https://pypi.python.org/pypi/nxbt
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = nxbt
include_package_data = true
python_requires = >= 3.6
zip_safe = False

[options.entry_points]
console_scripts =
    nxbt = nxbt.cli:main

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
max-line-length = 100
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/